--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Emmanuel</title>
+		<title>Codemedia</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
         <meta name="author" content="codemedia">
@@ -52,7 +52,7 @@
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Simple and Elegant</h3>
 						<h1>Emmanuel Teye</h1>
-						<h2 class="rotate">PROGRAMMER &AMP; DEVELOPER, FRONTEND &AMP; BACKEND DEVELOPER</h2>
+						<h2 class="rotate">PROGRAMMER &AMP; DEVOPS ENGINEER, FRONTEND &AMP; BACKEND DEVELOPER</h2>
 						<p class="textColor">I am a fullstatck developer using technologies like nodejs, reactjs,mongoose, docker for containerizing apps and kubernetes for container orchestrations.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
